# finance-dashboard

./: .gitignore  Procfile  README.md  Ticker_List.py  pyproject.toml  requirements.txt  startup.sh
.github/workflows/: production_sec-scraper.yml
.streamlit/: secrets.toml
pages/: 1Financial_Statements.py  2SEC Download.py  2SEC Scraper.py
tests/: code_test.ipynb  researcher_agent_mockup.ipynb
utils/: _alphavantageAPI.py  _fmpAPI.py  _logger.py  _mongo.py  _sec_page_utils.py  _utils.py  logger.py
utils/database/: _connector.py
utils/sec-scraper/: sec_api_test.ipynb  sec_class.py  sec_scraper_doc.md
utils/sec-scraper/sec_data/: aapl.csv  sec_api_test.ipynb
utils/secscraper/: _dataclasses.py  _mapping.py  _utils.py  sec_api_test.ipynb  sec_class.py  sec_scraper_doc.md
