[tool.poetry]
name = "finance_dashboard"
version = "0.1.0"
description = "Finance Dashboard built on top of streamlit, pandas, and beautifulsoup"
authors = ["dizzydwarfus"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^1.26.2"
pandas = "^2.1.3"
beautifulsoup4 = "^4.12.2"
ipykernel = "^6.26.0"
matplotlib = "^3.8.2"
lxml = "^4.9.3"
pydantic = "^2.5.2"
pymongo = "^4.6.0"
python-dotenv = "^1.0.0"
seaborn = "^0.13.0"
tqdm = "^4.66.1"
streamlit = "^1.28.2"
langchain = "^0.0.340"
openai = "^1.3.5"
jupyter = "^1.0.0"
plotly = "^5.18.0"
ratelimit = "^2.2.1"
yfinance = "^0.2.33"
openpyxl = "^3.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
